@startuml

title Gestionale Affitti — Domain Model

left to right direction
hide methods
hide stereotypes
skinparam classAttributeIconSize 0

class Persona {
  nome
  cognome
  luogoNascita
  dataNascita
  codiceFiscale
  iban [0..1]
}

class Indirizzo {
  nazione [0..1]
  provincia
  comune
  cap [0..1]
  indirizzo
  civico [0..1]
  scala [0..1]
  interno [0..1]
}

class DocumentoRiconoscimento {
  tipo
  organoEmittente
  dataRilascio
  dataScadenza
  numero
}

class Immobile {
  nome
}

class DatiCatastali {
  codiceComunale
  foglio
  particella
  subalterno
  categoria
  consistenza
  rendita
}

class Contratto {
  nomeDescrizione
  dal
  al
  canoneMensile
  /canoneAnnuale
  giornoPagamento
  registratoIl
  contenuto
}

class TipologiaContrattuale {
  denominazione
  durata
  rinnovo
}

class Articolo {
  numArticolo
  numParte
  titolo
  sottotitolo
  descrizione
}

class Pagamento {
  annoCompetenza
  meseCompetenza
  dataPagamento
  importo
}

Persona "0..*" -- "1" Indirizzo : residenza
Immobile "0..*" -- "1" Indirizzo : ubicazione
Persona "1" -- "0..1" DocumentoRiconoscimento : documento

Immobile "1" -- "1" DatiCatastali : dati catastali
Immobile "1" -- "0..*" Contratto : oggetto della locazione

Persona "1" -- "0..*" Contratto : proprietario
Persona "1" -- "0..*" Contratto : inquilino

TipologiaContrattuale "1" -- "0..*" Contratto : tipologia
TipologiaContrattuale "1" -- "1..*" Articolo : articoli predefiniti

Contratto "1" -- "1..*" Pagamento : pagamenti

note right of Persona
  { codiceFiscale univoco e strutturalmente valido }
  { in UC-01 il codiceFiscale di una Persona
    già registrata non è modificabile }
  { la coerenza semantica fra codice fiscale
    e dati anagrafici è fuori scope }
  { posizioni numeriche del codice fiscale:
    ammesse anche le sostituzioni per omocodia }
  { in UC-01, età alla data corrente in 18..150 anni }
  { se assume il ruolo di inquilino,
    DocumentoRiconoscimento presente }
  { iban opzionale; richiesto solo dai template
    che usano il placeholder proprietario.iban }
end note

note right of DocumentoRiconoscimento
  { tipo = carta d'identità oppure passaporto }
  { per l'inquilino, dataRilascio <= data corrente }
  { per l'inquilino, dataScadenza > data corrente }
end note

note bottom of DatiCatastali
  { codiceComunale + foglio + particella +
    subalterno identificano univocamente l'Immobile }
  { foglio, particella, subalterno,
    consistenza e rendita >= 0 }
end note

note bottom of Indirizzo
  { nazione, CAP, civico, scala e interno opzionali }
  { per l'Immobile, se interno è specificato,
    l'indirizzo completo non può duplicare
    quello di un altro Immobile }
end note

note right of Contratto
  { proprietario.codiceFiscale <> inquilino.codiceFiscale }
  { canoneMensile > 0 }
  { giornoPagamento in 1..28 }
  { al calcolato da dal e TipologiaContrattuale.durata
    durante la definizione del periodo e poi conservato }
  { periodi relativi allo stesso Immobile non sovrapposti }
  { registratoIl valorizzato alla registrazione definitiva }
  { /canoneAnnuale = canoneMensile * 12 }
  { contenuto = copia completa del contratto generato }
end note

note bottom of TipologiaContrattuale
  { durata e rinnovo espressi in anni }
  { v1.0: concordato durata=3, rinnovo=2;
    libero durata=4, rinnovo=4 }
  { il rinnovo non estende il periodo gestito in v1.0 }
end note

note bottom of Articolo
  { Articolo rappresenta esclusivamente un template }
  { gli elementi con lo stesso numArticolo e numParte
    differenti sono parti ordinate dello stesso articolo }
  { numArticolo + numParte univoci nella TipologiaContrattuale }
end note

note bottom of Pagamento
  { meseCompetenza in 1..12 }
  { al massimo un Pagamento per annoCompetenza +
    meseCompetenza dello stesso Contratto }
  { importo determinato dal Contratto e memorizzato come storico }
  { prima mensilità: anno/mese da Contratto.dal,
    dataPagamento = Contratto.dal }
end note

@enduml
